# package information
[metadata]
name = cocotbext_daxzio
version = attr: cocotbext.daxzio.version.__version__
description = Helper wrapper for existing cocotb extentions
keywords = cocotb
author = Dave Keeshan
author_email = dave.keeshan@daxzio.com
license = MIT
url = https://github.com/daxzio/cocotbext-daxzio
project_urls =
    Bug Tracker = https://github.com/daxzio/cocotbext-daxzio/issues
    Source Code = https://github.com/daxzio/cocotbext-daxzio
download_url = https://github.com/daxzio/cocotbext-daxzio/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
# install_requires =
#     cocotb >= 1.6.0
#     cocotb-bus

[options.extras_require]
test =
    pytest
    cocotb-test

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib
